// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components 1`] = `
<div>
  <h3
    className="BugzillaComponents-header-1"
  />
  <table>
    <thead>
      <tr>
        <th />
        <th />
        <th>
          P1s defect
        </th>
        <th>
          Unassigned tracked beta bugs
        </th>
        <th>
          New defects
        </th>
        <th>
          Nightly New Regression
        </th>
        <th>
          Nightly carry over
        </th>
        <th>
          Needinfo
        </th>
        <th>
          P1s task
        </th>
        <th>
          P1s enhancement
        </th>
        <th>
          sec-{critical, high}
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            className="DrilldownIcon-svgWrapper-3"
            name="Core::DOM: Core & HTML"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-5 DrilldownIcon-icon-4"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </td>
        <td>
          Core::DOM: Core & HTML
        </td>
      </tr>
      <tr>
        <td>
          <div
            className="DrilldownIcon-svgWrapper-3"
            name="Core::DOM: IndexedDB"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-5 DrilldownIcon-icon-4"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </td>
        <td>
          Core::DOM: IndexedDB
        </td>
      </tr>
      <tr>
        <td>
          <div
            className="DrilldownIcon-svgWrapper-3"
            name="Core::JavaScript Engine"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-5 DrilldownIcon-icon-4"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </td>
        <td>
          Core::JavaScript Engine
        </td>
      </tr>
      <tr>
        <td>
          <div
            className="DrilldownIcon-svgWrapper-3"
            name="Toolkit::Async Tooling"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-5 DrilldownIcon-icon-4"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </td>
        <td>
          Toolkit::Async Tooling
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders components bucketed as teams 1`] = `
<div>
  <h3
    className="BugzillaComponents-header-1"
  />
  <table>
    <thead>
      <tr>
        <th />
        <th />
        <th>
          P1s defect
        </th>
        <th>
          Unassigned tracked beta bugs
        </th>
        <th>
          New defects
        </th>
        <th>
          Nightly New Regression
        </th>
        <th>
          Nightly carry over
        </th>
        <th>
          Needinfo
        </th>
        <th>
          P1s task
        </th>
        <th>
          P1s enhancement
        </th>
        <th>
          sec-{critical, high}
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            className="DrilldownIcon-svgWrapper-3"
            name="DOM Core"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-5 DrilldownIcon-icon-4"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </td>
        <td>
          DOM Core
        </td>
      </tr>
      <tr>
        <td>
          <div
            className="DrilldownIcon-svgWrapper-3"
            name="DOM Fission"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-5 DrilldownIcon-icon-4"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </td>
        <td>
          DOM Fission
        </td>
      </tr>
      <tr>
        <td>
          <div
            className="DrilldownIcon-svgWrapper-3"
            name="Worker and Storage"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-5 DrilldownIcon-icon-4"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </td>
        <td>
          Worker and Storage
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
